--- a/app/src/main/res/layout/activity_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_sign_up_page.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.venkada.ants.LoginPage">
+    tools:context="com.ants.SignUpPage">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_login_page" />
+    <include layout="@layout/content_sign_up_page" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
