--- a/app/src/main/res/layout/content_sign_up_page.xml
+++ b/app/src/main/res/layout/content_sign_up_page.xml
@@ -10,39 +10,43 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <EditText android:id="@+id/enter_username"
+    <EditText android:id="@+id/enter_first_name"
         android:layout_weight="1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/enter_username" />
+        android:hint="@string/enter_first_name" />
 
-    <EditText android:id="@+id/enter_password"
-        android:inputType="textPassword"
+
+    <EditText android:id="@+id/enter_last_name"
         android:layout_weight="1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/enter_username"
-        android:layout_alignParentLeft="true"
-        android:layout_toLeftOf="@+id/enter_username"
-        android:hint="@string/enter_password" />
+        android:hint="@string/enter_last_name" />
+
+    <EditText android:id="@+id/enter_dob"
+        android:layout_weight="1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/enter_dob" />
+
+    <EditText android:id="@+id/enter_loc"
+        android:layout_weight="1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/enter_location" />
+
+    <EditText android:id="@+id/enter_phone_number"
+        android:layout_weight="1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/enter_phone_num" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/enter_password"
-        android:layout_alignParentLeft="true"
-        android:layout_toLeftOf="@+id/enter_username"
-        android:background="@android:color/holo_blue_dark"
-        android:text="@string/login"
-        android:layout_weight="1"
-        android:onClick="login" />
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
+        android:padding="20px"
         android:text="@string/sign_up"
         android:layout_weight="1"
-        android:onClick="register"/>
+        android:onClick="register" />
 
 </LinearLayout>
