--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimary">#26ae90</item>
         <item name="colorPrimaryDark">#26ae90</item>
         <item name="colorAccent">#26ae90</item>
-        <item name="android:windowBackground">#26ae90</item>
+        <item name="android:windowBackground">@color/bg_login</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
