--- a/app/src/main/res/layout/activity_create_questions.xml
+++ b/app/src/main/res/layout/activity_create_questions.xml
@@ -10,4 +10,39 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.ants.CreateQuestionsActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/Question"
+        android:layout_toRightOf="@+id/Question"
+        android:orientation="vertical"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:weightSum="1">
+
+        <EditText
+            android:id="@+id/Question"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_weight="0.86"
+            android:background="@color/white"
+            android:gravity="center"
+            android:hint="Input Question"
+            android:textColorHint="@color/input_login_hint"
+            android:textSize="24sp" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/btn_login_bg"
+            android:text="Add"
+            android:textColor="@color/btn_login" />
+    </LinearLayout>
 </RelativeLayout>
