--- a/app/src/main/res/layout/activity_create_questions.xml
+++ b/app/src/main/res/layout/activity_create_questions.xml
@@ -22,7 +22,7 @@
         android:weightSum="1">
 
         <EditText
-            android:id="@+id/Question"
+            android:id="@+id/questionField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -38,7 +38,7 @@
             android:textSize="24sp" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btnAdd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/btn_login_bg"
